syntax = "proto3";

message Vector {
    repeated int32 values = 1;
    string label = 2;
}

message Matrix {
    repeated Vector rows = 1;
    repeated string header = 2;
}

message MutexRun {
    Matrix matrix = 1;
    map<string,string> parameters = 2;
}